addons/search-profile/style.css
.tabs button .tab-icon.sa-search-profile-icon {
  width: 24px;
  height: 24px;
  border-radius: 3px;
}

.sa-search-profile-btn span {
  display: flex;
  justify-content: center;
}

.tabs button:disabled {
  opacity: 0.5;
  cursor: default;
}

.tabs button:disabled:hover,
.tabs button:disabled:active {
  background-color: transparent;
  border: none;
}

